--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 .vagrant/
 .vscode/
 join-command
-scripts/
 _/
 __/
 *.log
 ansible/
 aaaa
 ignore/
+*.pem
+*.jks
+kafka-ssl-keystore-truststore.sh
+keystore-truststore.sh
+.envrc
+*.key
+*.crt
+*.srl
