--- a/infrastructure/kafka/playbooks/roles/kafka/templates/server.properties
+++ b/infrastructure/kafka/playbooks/roles/kafka/templates/server.properties
@@ -7,6 +7,13 @@ broker.id={{ kafka_broker_id }}
 # The port the socket server listens on
 port={{ kafka_port }}
 
+
+
+
+
+
+
+
 ############################# Zookeeper #############################
 
 # Zookeeper connection string (see zookeeper docs for details).
@@ -14,8 +21,10 @@ port={{ kafka_port }}
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect={% for host in groups['zookeepernodes'] %}{{ hostvars[host]['inventory_hostname'] }}:2181{% if not loop.last %},{% endif %}{% endfor %}
 
+{% if not kafka_mTLS %}
+zookeeper.connect={% for host in groups['zookeepernodes'] %}{{ hostvars[host]['inventory_hostname'] }}:2181{% if not loop.last %},{% endif %}{% endfor %}
+{% endif %}
 
 ############################# Log Basics #############################
 
@@ -71,3 +80,48 @@ socket.send.buffer.bytes=1048576
 queued.max.requests=1000
 fetch.purgatory.purge.interval.requests=100
 producer.purgatory.purge.interval.requests=100
+
+
+
+# http://juplo.de/encrypt-communication-between-kafka-and-zookeeper-with-tls/
+# export KAFKA_OPTS="
+#   -Dzookeeper.clientCnxnSocket=org.apache.zookeeper.ClientCnxnSocketNetty
+#   -Dzookeeper.client.secure=true
+#   -Dzookeeper.ssl.keyStore.location=client.jks #### TODO CLIENT.JKS
+#   -Dzookeeper.ssl.keyStore.password={{ kafka_keystore_password }}
+#   -Dzookeeper.ssl.trustStore.location={{ kafka_truststore_dir }}/kafka-truststore.jks
+#   -Dzookeeper.ssl.trustStore.password={{ kafka_truststore_password }}
+# "
+# kafka_2.12-2.3.0/bin/kafka-topics.sh \
+#   --zookeeper zookeeper:2182 \
+#   --create --topic test \
+#   --partitions 1 --replication-factor 2
+
+{% if kafka_mTLS %}
+
+# # listeners=SSL:///{{ inventory_hostname }}:9193,SASL_SSL://{{ inventory_hostname }}:9194
+# listeners=SSL://{{ ansible_host }}:9193,SASL_SSL://{{ ansible_host }}:9194
+
+# security.inter.broker.protocol=SSL
+# ssl.client.auth=required
+# listener.name.sasl_ssl.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required user_consumer="pw4consumer" user_producer="pw4producer";
+# sasl.enabled.mechanisms=PLAIN
+
+zookeeper.connect={% for host in groups['zookeepernodes'] %}{{ hostvars[host]['ansible_host'] }}:2182{% if not loop.last %},{% endif %}{% endfor %}
+
+# Required to use TLS-to-ZooKeeper (default is false)
+zookeeper.ssl.client.enable=true
+
+# Required to use TLS-to-ZooKeeper
+zookeeper.clientCnxnSocket=org.apache.zookeeper.ClientCnxnSocketNetty
+
+# Define key/trust stores to use TLS-to-ZooKeeper; ignored unless zookeeper.ssl.client.enable=true
+zookeeper.ssl.keystore.location={{ kafka_keystore_dir }}/kafka-keystore.jks
+zookeeper.ssl.keystore.password={{ kafka_keystore_password }}
+zookeeper.ssl.truststore.location={{ kafka_truststore_dir }}/kafka-truststore.jks
+zookeeper.ssl.truststore.password={{ kafka_truststore_password }}
+
+# Tells broker to create ACLs on znodes
+zookeeper.set.acl=true
+
+{% endif %}
