--- a/provisioning/kafka.yml
+++ b/provisioning/kafka.yml
@@ -1,11 +1,11 @@
 ---
-- hosts: k8smasters
+- hosts: kafkanodes
   become: true
   roles:
-    - role: 'infrastructure/zookeeper/playbooks/roles/zookeeper'
     - role: 'infrastructure/kafka/playbooks/roles/kafka'
-    - role: 'infrastructure/kafka/playbooks/roles/kafka-topic'
+    - role: 'infrastructure/kafka/playbooks/roles/kafka-create-topic'
       vars:
         kafka_topics: [ teste, testando ]
+
     # - role: 'infrastructure/kubernetes/deploy/roles/kubernetes-install'
     # - role: 'infrastructure/kubernetes/deploy/roles/kubernetes-master'
