--- a/infrastructure/docker/playbooks/roles/docker-install/tasks/main.yml
+++ b/infrastructure/docker/playbooks/roles/docker-install/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Add apt repository for stable version
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ linux_distro }} stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
     state: present
 
 - name: Install docker and its dependecies
