--- a/infrastructure/kubernetes/playbooks/roles/kubernetes-install/tasks/main.yml
+++ b/infrastructure/kubernetes/playbooks/roles/kubernetes-install/tasks/main.yml
@@ -141,7 +141,7 @@
 
 - name: Add apt repository for stable version
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ linux_distro }} stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
     state: present
 
 - name: Install packages that allow apt to be used over HTTPS
@@ -209,7 +209,7 @@
 - name: Configure node ip
   lineinfile:
     path: /etc/default/kubelet
-    line: KUBELET_EXTRA_ARGS=--node-ip={{ node_ip }}
+    line: KUBELET_EXTRA_ARGS=--node-ip={{ ansible_host }}
     create: yes
 
 - name: Restart kubelet
