--- a/infrastructure/kubernetes/playbooks/roles/kubernetes-master/tasks/main.yml
+++ b/infrastructure/kubernetes/playbooks/roles/kubernetes-master/tasks/main.yml
@@ -7,9 +7,13 @@
   args:
     warn: false 
   with_items:
-    - mkdir -p {{ home_dir }}/.kube
-    - cp -i /etc/kubernetes/admin.conf {{ home_dir }}/.kube/config
-    - chown vagrant:vagrant {{ home_dir }}/.kube/config
+    - mkdir -p $HOME/.kube
+    - cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+    - chown vagrant:vagrant $HOME/.kube/config
+  # with_items:
+  #   - mkdir -p {{ home_dir }}/.kube
+  #   - cp -i /etc/kubernetes/admin.conf {{ home_dir }}/.kube/config
+  #   - chown vagrant:vagrant {{ home_dir }}/.kube/config
 - name: Install weave pod network
   become: false
   shell: kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
