--- a/provisioning/inventory.yml
+++ b/provisioning/inventory.yml
@@ -1,67 +1,120 @@
 all:
   hosts:
-    elliot:
-      zookeeper_id                  : 1
-      kafka_broker_id               : 1
-      ansible_host                  : 192.168.50.10
-      pod_network_cidr              : 192.168.0.0/16
-      zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
-      zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
-      kafka_truststore_path         : .private/certificates/truststore/truststore.jks
-      kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
-      ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
+    # elliot:
+    #   host_name                     : elliot
+    #   zookeeper_id                  : 1
+    #   kafka_broker_id               : 1
+    #   pod_network_cidr              : 192.168.0.0/16
+    #   zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
+    #   zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
+    #   kafka_truststore_path         : .private/certificates/truststore/truststore.jks
+    #   kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
+    #   ansible_host                  : 192.168.50.10
+    #   ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
 
-    darlene:
-      zookeeper_id                  : 2
-      kafka_broker_id               : 2
-      ansible_host                  : 170.154.32.13
-      pod_network_cidr              : 192.168.0.0/16
-      zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
-      zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
-      kafka_truststore_path         : .private/certificates/truststore/truststore.jks
-      kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
-      ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
+    # darlene:
+    #   host_name                     : darlene
+    #   zookeeper_id                  : 2
+    #   kafka_broker_id               : 2
+    #   ansible_host                  : 170.154.32.13
+    #   pod_network_cidr              : 192.168.0.0/16
+    #   zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
+    #   zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
+    #   kafka_truststore_path         : .private/certificates/truststore/truststore.jks
+    #   kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
+    #   ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
 
-    tyrell:
-      zookeeper_id                  : 3
-      kafka_broker_id               : 3
-      ansible_host                  : 140.320.42.15
-      pod_network_cidr              : 192.168.0.0/16
-      zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
-      zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
-      kafka_truststore_path         : .private/certificates/truststore/truststore.jks
-      kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
-      ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
+    # tyrell:
+    #   host_name                     : tyrell
+    #   zookeeper_id                  : 3
+    #   kafka_broker_id               : 3
+    #   ansible_host                  : 140.320.42.15
+    #   pod_network_cidr              : 192.168.0.0/16
+    #   zookeeper_truststore_path     : .private/certificates/truststore/truststore.jks
+    #   zookeeper_keystore_path       : .private/certificates/zookeeper/zookeeper-keystore-1.jks
+    #   kafka_truststore_path         : .private/certificates/truststore/truststore.jks
+    #   kafka_keystore_path           : .private/certificates/kafka/kafka-keystore-1.jks
+    #   ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
 
-    angela:
-      ansible_host                  : 165.120.88.2
-      host_name: angela
-      cron_renew_day: 1
-      mongodb_keyfile_path          : .private/certificates/mongo/mongo-keyfile
-      mongodb_ca_cert_path          : .private/certificates/ca-cert.pem
-      mongodb_ca_key_path           : .private/certificates/ca-key.pem
-      mongodb_cert_path             : .private/certificates/mongo1.crt
-      mongodb_key_path              : .private/certificates/mongo1.key
+    # angela:
+    #   host_name                     : angela
+    #   ansible_host                  : 165.120.88.2
+    #   cron_renew_day: 1
+    #   mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
+    #   mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
+    #   # mongodb_keyfile_path          : .private/certificates/mongo/mongo1.key
+
+    mongo1:
+      host_name                     : mongo1
+      ansible_host                  : 190.120.88.11
+      mongod_port                   : 2700
+      mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
+      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
+      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
+    
+    mongo2:
+      host_name                     : mongo2
+      ansible_host                  : 190.120.88.12
+      mongod_port                   : 2701
+      mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
+      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
+      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
+    
+    mongo3:
+      host_name                     : mongo3
+      ansible_host                  : 190.120.88.13
+      mongod_port                   : 2702
+      mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
+      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
+      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
+
 
   children:
-    k8smasters:
+    mongo_nodes:
       hosts:
-        ---
-    k8snodes:
-      hosts:
-        ---
-  
-    zookeepernodes:
-      hosts:
-        elliot:
-  
-    kafkanodes:
-      hosts:
-        elliot:
+        mongo1:
+        mongo2:
+        mongo3:
 
-    mongonodes:
+    mongo_servers:
       hosts:
-        angela:
+        mongo1:
+        mongo2:
+        mongo3:
+      
+    replication_servers:
+      hosts:
+        mongo1:
+        mongo2:
+        mongo3:
+
+    mongoc_servers:
+      hosts:
+        mongo1:
+        mongo2:
+  
+    mongos_servers:
+      hosts:
+        mongo1:
+        mongo2:
+    # k8smasters:
+    #   hosts:
+    #     ---
+    # k8snodes:
+    #   hosts:
+    #     ---
+  
+    # zookeepernodes:
+    #   hosts:
+    #     ---
+    #     # elliot:
+  
+    # kafkanodes:
+    #   hosts:
+    #     ---
+        # elliot:
+
+
     # mongoprimary:
     #   hosts:
     #     angela:
