--- a/provisioning/mongodb.yml
+++ b/provisioning/mongodb.yml
@@ -1,22 +1,25 @@
 ---
-- hosts: mongo_nodes
-  become: true
-  roles:
-  - role: 'infrastructure/mongodb/playbooks/roles/mongo'
-
 - hosts: mongo_servers
   become: true
   roles:
-  - role: 'infrastructure/mongodb/playbooks/roles/mongod'
+  - {
+      role: 'infrastructure/mongodb/playbooks/roles/mongodb',
+      flags: ['install', 'mongod']
+    }
 
 - hosts: mongoc_servers
   become: true
   roles:
-  - role: 'infrastructure/mongodb/playbooks/roles/mongoc'
+  - {
+      role: 'infrastructure/mongodb/playbooks/roles/mongodb',
+      flags: ['mongoc']
+    }
 
 - hosts: mongos_servers
   become: true
   roles:
-  - role: 'infrastructure/mongodb/playbooks/roles/mongos'
-
+  - {
+      role: 'infrastructure/mongodb/playbooks/roles/mongodb',
+      flags: ['mongos']
+    }
 
