--- a/provisioning/inventory.yml
+++ b/provisioning/inventory.yml
@@ -45,28 +45,28 @@ all:
     #   # mongodb_keyfile_path          : .private/certificates/mongo/mongo1.key
 
     mongo1:
-      host_name                     : mongo1
+      # ansible_user                  : vagrant
       ansible_host                  : 190.120.88.11
+      host_name                     : mongo1
       mongod_port                   : 2700
       mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
-      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
-      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
-    
+
     mongo2:
-      host_name                     : mongo2
+      # ansible_user                  : vagrant
       ansible_host                  : 190.120.88.12
+      # ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
+      host_name                     : mongo2
       mongod_port                   : 2701
       mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
-      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
-      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
-    
+
     mongo3:
-      host_name                     : mongo3
+      # ansible_user                  : vagrant
       ansible_host                  : 190.120.88.13
+      # ansible_ssh_private_key_file  : /home/marcos/.vagrant.d/insecure_private_key
+      host_name                     : mongo3
       mongod_port                   : 2702
       mongodb_key_file_path         : .private/certificates/mongo/mongo-keyfile.key
-      # mongodb_ca_cert_path          : .private/certificates/mongo/mongo-ca-pub.crt
-      # mongodb_cert_key_path         : .private/certificates/mongo/mongo1.pem
+
 
 
   children:
@@ -85,6 +85,8 @@ all:
     mongoc_servers:
       hosts:
         mongo1:
+        mongo2:
+        mongo3 :
 
     mongos_servers:
       hosts:
