--- a/infra/kafka/playbooks/roles/kafka/handlers/main.yaml
+++ b/infra/kafka/playbooks/roles/kafka/handlers/main.yaml
@@ -16,6 +16,6 @@
 
 - name: Restart Kafka service
   systemd:
-    name: zookeeper.service
+    name: kafka.service
     state: restarted
     daemon_reload: yes
