--- a/infra/consul/playbooks/roles/consul/tasks/install.yml
+++ b/infra/consul/playbooks/roles/consul/tasks/install.yml
@@ -80,3 +80,12 @@
     owner: '{{ consul_user }}'
     group: '{{ consul_group }}'
 
+# - name: Create iptables
+#   template:
+#     src: iptables.j2
+#     dest: /etc/iptables.rules
+#     force: yes
+#     owner: '{{ consul_user }}'
+#     group: '{{ consul_group }}'
+#   notify:
+#     - restart iptables
