--- a/kubeapi/makefile
+++ b/kubeapi/makefile
@@ -3,10 +3,16 @@ codegen:
 	./scripts/codegen.sh
 
 build:
-	GO111MODULE=on CGO_ENABLED=0 GOOS=linux go build .
+	docker build -t marcos30004347/kubeapi .
 
 run:
 	sudo env "PATH=${PATH}" go run . --etcd-servers localhost:2379 \
     --authentication-kubeconfig ${HOME}/.kube/config \
     --authorization-kubeconfig ${HOME}/.kube/config \
     --kubeconfig ${HOME}/.kube/config
+
+
+deploy: build
+	kind load docker-image marcos30004347/kubeapi:latest
+	kubectl apply -f ./k8s/ns.yaml
+	kubectl apply -f ./k8s/
