feat: add deploy to kubeapi

--- a/kubeapi/k8s/v1alpha1-apiservice.yaml
+++ b/kubeapi/k8s/v1alpha1-apiservice.yaml
@@ -8,6 +8,6 @@ spec:
   groupPriorityMinimum: 1000
   versionPriority: 15
   service:
-    name: api
+    name: apiserver
     namespace: kubeapi-apiserver
   version: v1alpha1
