--- a/kubeapi/k8s/deployment.yaml
+++ b/kubeapi/k8s/deployment.yaml
@@ -17,6 +17,8 @@ spec:
     spec:
       serviceAccountName: apiserver
       containers:
+      # - name: etcd
+      #   image: quay.io/coreos/etcd:v3.2.24
       - name: apiserver
         image: marcos30004347/kubeapi:latest
         imagePullPolicy: Never
@@ -26,6 +28,5 @@ spec:
         - --cert-dir=/tmp/certs
         - --secure-port=8443
         - --v=4
-    
-      - name: etcd
-        image: quay.io/coreos/etcd:v3.4.13
+  
+
