--- a/kubeapi/k8s/service.yaml
+++ b/kubeapi/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: apiserver
   namespace: kubeapi-apiserver
 spec:
   ports:
   - port: 443
     protocol: TCP
-    targetPort: 8443
+    targetPort: 443
   selector:
     apiserver: 'true'
